--- a/assets/settings.properties
+++ b/assets/settings.properties
@@ -1,6 +1,6 @@
 # GPS plug-in: settings
 # the main command to use to interact with the script via chat; the initial '/' is added AUTOMATICALLY
-#command=gps
+command=gps
 # whether regular players can teleport to waypoints or not (0 = no, !0 = yes)
 allowTpToWp=0
 # the max length of waypoint names displayed in the GUI
