--- a/assets/settings.properties
+++ b/assets/settings.properties
@@ -1,9 +1,12 @@
 # GPS plug-in: settings
-# the main command to use to interact with the script via chat; the initial '/' is added AUTOMATICALLY
+# The main command to use to interact with the script via chat; the initial '/' is added AUTOMATICALLY
+# (default: "gps")
 command=gps
-# whether regular players can teleport to waypoints or not (0 = no, !0 = yes)
+# Whether regular players can teleport to way-points or not (0 = no, !0 = yes; default 0)
 allowTpToWp=0
-# the max length of waypoint names displayed in the GUI
+# The vertical position of the GPS data window, as a fraction of the total screen height (default: 0.1)
+gpsYPos=0.1
+# The max length of waypoint names displayed in the GUI (default: 8)
 wpDispLength=8
-# the deviation from radial to waypoint, under which no arrow is displayed in the GUI
+# The deviation from radial to waypoint, under which no arrow is displayed in the GUI (default: 5)
 wpHdgPrecis=5
