--- a/assets/settings.properties
+++ b/assets/settings.properties
@@ -2,6 +2,8 @@
 # The main command to use to interact with the script via chat; the initial '/' is added AUTOMATICALLY
 # (default: "gps")
 command=gps
+# The locale to use for localisation (default "en")
+locale=en
 # Whether regular players can teleport to way-points or not (0 = no, !0 = yes; default 0)
 allowTpToWp=0
 # The vertical position of the GPS data window, as a fraction of the total screen height (default: 0.1)
