--- a/assets/settings.properties
+++ b/assets/settings.properties
@@ -2,9 +2,13 @@
 # The main command to use to interact with the script via chat; the initial '/' is added AUTOMATICALLY
 # (default: "gps")
 command=gps
+# Whether coordinates are displayed in native RW format or in standard format
+# (0 = no, any integer number other than 0 = yes; default 0)
+coordNativeFormat=0
 # The locale to use for localisation (default "en")
 locale=en
-# Whether regular players can teleport to way-points or not (0 = no, !0 = yes; default 0)
+# Whether regular players can teleport to way-points or not
+# (0 = no, any integer number other than 0 = yes; default 0)
 allowTpToWp=0
 # The vertical position of the GPS data window, as a fraction of the total screen height (default: 0.1)
 gpsYPos=0.1
