--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: GPS
+name: com.vms.GPS
 main: com.vistamaresoft.gps.Gps
-version: 1.3.1
+version: 1.4.0
 author: Maurizio M. Gavioli aka Miwarre
 team: VistaMare Software
 description: "To aid the player in world navigation and positioning.
